aggiunta funzione addgroup e leavegroup
